# sockets

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client  client.cpp  client.h  main.cpp
confighandler/: CMakeLists.txt  confighandler.cpp  confighandler.h
server/: CMakeLists.txt  confighandler.cpp  confighandler.h  main.cpp  server  server.cfg  server.cpp  server.h
